fix jumpy load animation

--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,12 @@ html {height: 100%;}
     text-align: center;
     height: 0em;
     overflow:hidden;
-    transition: height .5s ease-in, opacity 1s;
+    transition: height 1s;
 }
 .loading #loading {
     display: block;
     opacity: 1.0;
-    height: 100%;
+    height: 6em;
 }
 #loading img {
     margin-top:1em;
